force-app/main/default/objects/case_recommendation__c/case_recommendation__c.object-meta.xml
<CustomObject>
    <label>Case Recommendation</label>
    <pluralLabel>Case Recommendations</pluralLabel>
    <nameField>
        <label>Case Recommendation Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>