force-app/main/default/objects/Case_Recommendation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>MasterDetail</type>
    <masterLabel>Case</masterLabel>
    <relationshipLabel>Case Recommendations</relationshipLabel>
    <relationshipName>Case_Recommendations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <referenceTo>Case</referenceTo>
</CustomField>