force-app/main/default/objects/Case_Recommendation__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <description>AI confidence score for this recommendation expressed as a percentage (0-100).</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>