force-app/main/default/objects/Case_Recommendation__c/fields/Is_Applied__c.field-meta.xml
<CustomField>
    <fullName>Is_Applied__c</fullName>
    <label>Is Applied</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>