force-app/main/default/objects/Case_Recommendation__c/fields/Recommendation_Text__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Text__c</fullName>
    <label>Recommendation Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>