force-app/main/default/objects/Case_Recommendation__c/fields/Recommendation_Type__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Type__c</fullName>
    <label>Recommendation Type</label>
    <description>Classifies the category of AI recommendation surfaced in the Agent Console Workspace.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolution Step</fullName>
                <default>true</default>
                <label>Resolution Step</label>
            </value>
            <value>
                <fullName>Knowledge Article</fullName>
            </value>
            <value>
                <fullName>Escalation Path</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>