force-app/main/default/objects/Case_Recommendation__c/fields/Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Summary__c</fullName>
    <label>Resolution Summary</label>
    <description>Short summary of the recommended resolution approach for display in the Agent Console Workspace Recommendations panel.</description>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>