force-app/main/default/objects/Case_Recommendation__c/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Knowledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>